Thu Jan 21 13:48:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector.idl
        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver.idl
        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender.idl
        * connectors/dds4ccm/examples/Quoter/Broker/Broker.idl
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.idl
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor.idl
        * connectors/dds4ccm/examples/Shapes/Connector/Shapes_Connector.idl
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver.idl
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver.mpc
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender.idl
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender.mpc
          Use the new pragma ciao lem

        * DAnCE/TargetManager/TargetManager.idl:
        * DAnCE/TargetManager/TargetManagerExt.idl:
          Deleted, not used

Thu Jan 21 13:44:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ccm_dds.idl
        * connectors/dds4ccm/idl/dds4ccm_Base.idl
        * connectors/dds4ccm/idl/dds4ccm_Connector.idl
        * connectors/dds4ccm/idl/dds4ccm_ConnectorStatusListener.idl
        * connectors/dds4ccm/idl/dds4ccm_DataListenerControl.idl
        * connectors/dds4ccm/idl/dds4ccm_PortStatusListener.idl
        * connectors/dds4ccm/idl/dds4ccm_StateListenerControl.idl
        * connectors/dds4ccm/idl/dds_rtf2_dcps.idl
        * connectors/dds4ccm/idl/dds_rtf2_dcps_i_handle.idl
        * connectors/dds4ccm/tests/CSLDeadline/Connector/CSL_DeadlineTest_Connector.idl
        * connectors/dds4ccm/tests/CSLDeadline/Receiver/CSL_DeadlineTest_Receiver.idl
        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender.idl
        * connectors/dds4ccm/tests/CSLQoS/Connector/CSL_QoSTest_Connector.idl